# jdwp-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  pyproject.toml  smithery.yaml
.claude/: settings.example.json
.claude/agents/: jdwp-investigator.md
.claude/commands/: debug-exception.md  debug-hang.md  debug-performance.md  debug-understand-code.md  debug-wrong-results.md  investigate-exception.md  investigate-hang.md  trace-request.md
.githooks/: pre-commit
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  integration.yml  release.yml
docs/: deploy.md  registry-submissions.md  testing-agents.md
docs/superpowers/specs/: 2026-04-07-readme-release-examples-design.md  2026-04-07-request-tracing-design.md
examples/: README.md  debugging-a-hang.md  emondrian-native-sql.md  test_breakpoint.rs  test_find_class.rs  test_manual_stack.rs  test_stack_inspection.rs  test_string_values.rs  test_vm_commands.rs
jdwp-client/src/: array.rs  commands.rs  connection.rs  eventloop.rs  eventrequest.rs  events.rs  lib.rs  method.rs  object.rs  protocol.rs  reader.rs  reftype.rs  stackframe.rs  string.rs  thread.rs  types.rs  vm.rs
mcp-server/src/: config.rs  handlers.rs  main.rs  protocol.rs  session.rs  tools.rs  update_check.rs
python/jdwp_mcp/: __init__.py
test-app/: Dockerfile  TEST_PLAN.md  docker-compose.yml  test_mcp.sh
test-app/src/: DebugTestApp.java
