[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jdwp-mcp"
version = "0.2.0"
description = "Debug live JVMs through JDWP — from any MCP-compatible agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Ed Sweeney", email = "ed@onextent.com" },
]
keywords = ["mcp", "jdwp", "java", "debugger", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/dronsv/jdwp-mcp"
Repository = "https://github.com/dronsv/jdwp-mcp"

[project.scripts]
jdwp-mcp = "jdwp_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["python/jdwp_mcp"]
